--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-supabase==2.1.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-postgrest==0.13.0
+fastapi==0.115.5
+uvicorn[standard]==0.32.1
+supabase==2.10.0
+pydantic==2.10.3
+pydantic-settings==2.6.1
+python-dotenv==1.0.1
+postgrest==0.18.0
+httpx==0.28.1
