Update production API URL in .env.production

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
 # Production API URL (will be updated after Render deployment)
-VITE_API_URL=https://your-backend-url.onrender.com
+VITE_API_URL=https://command-gateway-backend-pyjx.onrender.com
